@@ -42,7 +42,7 @@ public class Main {
     private static ArrayList<Partido> partidos;
 
     public static void main(String[] args) throws MalformedURLException {
-        generarVentanaInicio();
+        //generarVentanaInicio();
         /*try {
             HashMap[] mp = getJornadas();
             for (HashMap hashMap : mp) {
@@ -55,6 +55,7 @@ public class Main {
         } catch (Exception e) {
             throw new RuntimeException(e);
         }*/
+        XML.generarXMlultimaJornada();
     }
     public static void cerrarSesion() {
         actual.dispose();
@@ -234,42 +235,42 @@ public class Main {
         // todo: verificar que se ha creado split
         return TJornada.generarJornadas();
     }
-    public static HashMap[] getJornadas() throws Exception{
+    public static void getJornadas() throws Exception{
         partidos = TJornada.getJornadas();
         if (partidos == null) {
             throw new Exception("Error al leer desde jornadas.");
         }
-        HashMap[] partidosMap = new HashMap[partidos.size()];
-        for (int i = 0; i < partidos.size(); i++) {
-            partidosMap[i] = dePartidosAhashmap(partidos.get(i));
-        }
-        return partidosMap;
+
+    }
+    public static HashMap<String, String>[] getUltimaJornada() {
+        return dePartidosAhashmap(TJornada.getUltimaJornada());
     }
 
-    public static HashMap[] getJornada(int numJornada) {
-        List<Partido> partidoDeJornada = partidos.stream().filter(_partido -> _partido.getJornada().getNumJornada() == numJornada).collect(Collectors.toList());
-        HashMap[] partidosMap = new HashMap[partidoDeJornada.size()];
-        for (int i = 0; i < partidoDeJornada.size(); i++) {
-            partidosMap[i] = dePartidosAhashmap(partidoDeJornada.get(i));
-        }
-        return partidosMap;
+    public static HashMap<String, String>[] getJornada(int numJornada) {
+        List<Partido> partidoDeJornada = partidos.stream().filter(_partido -> _partido.getJornada().getNumJornada() == numJornada).toList();
+        return dePartidosAhashmap((ArrayList<Partido>) partidoDeJornada);
     }
-    private static HashMap<String, String> dePartidosAhashmap(Partido partido) {
-        HashMap<String, String> partidoMap = new HashMap<>();
-        partidoMap.put("numJornada", String.valueOf(partido.getJornada().getNumJornada()));
-        partidoMap.put("fecha", partido.getFecha().toString());
-        partidoMap.put("nombre_equiop1", partido.getEquipo1().getNombre());
-        partidoMap.put("nombre_equiop2", partido.getEquipo2().getNombre());
-        partidoMap.put("logoEquipo1", partido.getEquipo1().getLogoImg());
-        partidoMap.put("logoEquipo2", partido.getEquipo2().getLogoImg());
-        if (partido.getFecha().before(new Date())) {
-            partidoMap.put("golesEquipo1", String.valueOf(partido.getGolesEquipo1()));
-            partidoMap.put("golesEquipo2", String.valueOf(partido.getGolesEquipo2()));
-        } else {
-            partidoMap.put("golesEquipo1", "sin jugar");
-            partidoMap.put("golesEquipo2", "sin jugar");
+    private static HashMap<String, String>[] dePartidosAhashmap(ArrayList<Partido> partidos) {
+        ArrayList<HashMap<String, String>> partidosMap = new ArrayList<>();
+        for (int i = 0; i < partidos.size(); i++) {
+            HashMap<String, String> partidoMap = new HashMap<>();
+            partidoMap.put("numJornada", String.valueOf(partidos.get(i).getJornada().getNumJornada()));
+            partidoMap.put("fecha", partidos.get(i).getFecha().toString());
+            partidoMap.put("nombre_equiop1", partidos.get(i).getEquipo1().getNombre());
+            partidoMap.put("nombre_equiop2", partidos.get(i).getEquipo2().getNombre());
+            partidoMap.put("logoEquipo1", partidos.get(i).getEquipo1().getLogoImg());
+            partidoMap.put("logoEquipo2", partidos.get(i).getEquipo2().getLogoImg());
+            if (partidos.get(i).getFecha().before(new Date())) {
+                partidoMap.put("golesEquipo1", String.valueOf(partidos.get(i).getGolesEquipo1()));
+                partidoMap.put("golesEquipo2", String.valueOf(partidos.get(i).getGolesEquipo2()));
+            } else {
+                partidoMap.put("golesEquipo1", "sin jugar");
+                partidoMap.put("golesEquipo2", "sin jugar");
+            }
+            partidosMap.add(partidoMap);
         }
-        return partidoMap;
+
+        return partidosMap.toArray(new HashMap[partidosMap.size()]);
     }
     public static int getCantidadPersonas(){
         return jugadoresInfome.size()+2;
